    - minor pywright gui tweaks to mouse click detection
    - changed pywright gui colors to better represent phoenix stylings
    - display games on game list in alphabetical, or most recently played order
    - game titles on menu have word wrapping
    - some settings screen adjustments
    - fps display moved to lower left corner, toggle it in settings
    - Command line arguments, could be built into a shortcut:
        Run a game directly with:
            PyWright.exe -run "games/MyGame"
        text mode, useful to debug quickly, will get more useful as it gets updated
            PyWright.exe -run "games/MyGame" -text 
    
    Customizability
    - some helpers to show evidence added graphic:
        core/macros/evidence.mcro
            set _ev [evidence_tag]
            set _description description to display
            set _name name to display
                and then
            addevanim - show scrolling info box about evidence, while also adding evidence to the court record
            showevl - popup evidence in left corner
            hideevl - pop away evidence in left corner
            showevr - popup evidence in right corner
            hideevr - pop away evidence in right corner
            If you want the description to match previously set description:
            set _ev [tag]
            set _description [tag]_desc
            set _name [tag]_name
    - couldnt override press/present buttons with different sized images, replaced custom press/present
        with ripped versions
    - hardcoded court_record button replaced with macro in core/macros/gui.mcro
        You can still change how it looks by overriding the graphic, but if you override
        the macros you can control how it works too, such as where it is positioned
        on the screen.
    - More built-in options for second screen interface:
        'theme_bigbutton {theme}' is a macro to set how the big button on the second screen looks